html and css styling  for site-header

--- a/src/app/site-header/site-header.component.html
+++ b/src/app/site-header/site-header.component.html
@@ -1,1 +1,11 @@
-<p>site-header works!</p>
+<div class="container">
+      <a routerLink="/home">Home</a>
+      <a routerLink="/event-list">Event Lists</a>
+      <div class="addForm" >
+        <a routerLink="/add-form">Add Event</a>
+      </div>
+      <div class="logOut" >
+        <a >Log out</a>
+      </div>
+     
+  </div>
