html , css styling and method added to event-list component

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -1,4 +1,5 @@
 <div  class="event-details"  >
+    
     <div class="event-info">
         <div class="title">
             <h1 >{{event.title}}</h1>
@@ -14,12 +15,13 @@
             <p>Time: {{event.time}}</p>
         </div>
         <div class="allDay">
-            <div>{{ event.allDay ? event.title + ' Event is all-day' :  event.title + ' Event is not all-day' }}
-            </div>        
-        </div>
+            <div>{{ event.allDay ? event.title + ' Event is all-day' :  event.title + ' Event is not all-day' }}</div>        </div>
 
+        
     </div>
 
+  
+     <!-- <button (click)="buyButtonClicked()">Buy</button> -->
     <button class="manage" (click)="navigateToForm(event.id)">Manage</button> 
 
 </div>
