--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -6,7 +6,7 @@
         </div>
         
         <div class="description">
-            <h3>Description:{{event.description}}</h3>
+            <h3>{{event.description}}</h3>
         </div>
         <div class="date">
             <p>Date: {{event.date  | date: 'EEEE, d MMMM yyyy'}}</p>
