--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -9,7 +9,7 @@
             <h3>Description:{{event.description}}</h3>
         </div>
         <div class="date">
-            <p>Date: {{event.date  | date: 'EEEE, d MMMM yyyy'}}</p>
+            <p>Date: {{ event.date | date: 'EEEE, d MMMM yyyy' : 'UTC' }}</p>
         </div>
         <div class="time">
             <p>Time: {{event.time}}</p>
